--- a/index.html
+++ b/index.html
@@ -12,7 +12,30 @@
 
 </head>
 <body>
-	
+	<header class="container-fluid">
+<!-- Navigation bar with logo -->
+		<div class="row">
+			<div class="col-md-3 col-md-offset-1">
+				<img src="img/petstore_logo.png" class="img-responsive logo-size" alt="Pet Store Logo"> <span class="word-logo">Pet Store</span>
+			</div>
+
+			<div class="col-md-4 col-md-offset-4">
+				<ul class="nav nav-pills">
+					<li role="presentation" class="active"><a href="#">Home</a></li>
+					<li role="presentation" ><a href="#">Products</a></li>
+					<li role="presentation" ><a href="#">Contact us</a></li>
+				</ul>
+			</div>
+		</header>
+		<!-- Hero Section -->
+		<div class="row">
+			<div class="col-md-12 hero">
+				<h1 class="text-center">THE PRODUCTS THEY LOVE. PRICES THAT YOU LIKE.</h1>
+
+
+			</div>
+		</div>
+	</div>
 
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
