--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <body>
 	<header class="container-fluid">
 <!-- Navigation bar with logo -->
-		<div class="row">
-			<div class="col-md-3 col-md-offset-1">
-				<img src="img/petstore_logo.png" class="img-responsive logo-size" alt="Pet Store Logo"> <span class="word-logo">Pet Store</span>
+		<div id="wrapper">
+			<div class="row">
+				<div class="col-md-3 col-md-offset-1">
+					<img src="img/petstore_logo.png" class="img-responsive logo-size" alt="Pet Store Logo"> <span class="word-logo">Pet Store</span>
+				</div>
 			</div>
-
+		</div>
 			<div class="col-md-4 col-md-offset-4">
 				<ul class="nav nav-pills">
 					<li role="presentation" class="active"><a href="#">Home</a></li>
@@ -28,14 +30,118 @@
 			</div>
 		</header>
 		<!-- Hero Section -->
-		<div class="row">
+		<div class="jumbotron">
 			<div class="col-md-12 hero">
-				<h1 class="text-center">THE PRODUCTS THEY LOVE. PRICES THAT YOU LIKE.</h1>
+				<h1 class="text-center" id="hero-text">THE PRODUCTS THEY LOVE. PRICES THAT YOU LIKE.</h1>
 
 
 			</div>
 		</div>
 	</div>
+
+	<!-- featured section -->
+<div class="container">
+	<div class="row">
+		<div class="col-md-8">
+			<div class="row">
+				<div class="col-md-12">
+						<h1>Featured</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="row">
+					  <div class="col-sm-6 col-md-12">
+					    <div class="thumbnail">
+					      <img src="img/product1.jpg" alt="...">
+					      <div class="caption">
+					        <h3>Thumbnail label</h3>
+					        <p>...</p>
+					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					      </div>
+					    </div>
+					  </div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="row">
+					  <div class="col-sm-6 col-md-12">
+					    <div class="thumbnail">
+					      <img src="img/product2.jpg" alt="...">
+					      <div class="caption">
+					        <h3>Thumbnail label</h3>
+					        <p>...</p>
+					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					      </div>
+					    </div>
+					  </div>
+					</div>
+
+
+
+				</div>
+				<div class="col-md-4">
+					<div class="row">
+					  <div class="col-sm-6 col-md-12">
+					    <div class="thumbnail">
+					      <img src="img/product3.jpg" alt="...">
+					      <div class="caption">
+					        <h3>Thumbnail label</h3>
+					        <p>...</p>
+					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					      </div>
+					    </div>
+					  </div>
+					</div>
+
+				</div>
+			</div>
+
+		</div>
+
+			<div class="col-md-3 col-md-offset-1" id="services-section">
+				<div class="row">
+					<h2>Services</h2>
+					<ul class="nav nav-pills nav-stacked" id="services-nav">
+					  <li role="presentation" class="active"><a href="#">Home</a></li>
+					  <li role="presentation"><a href="#">Profile</a></li>
+					  <li role="presentation"><a href="#">Messages</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- feature section ends here -->
+	<footer class="container-fluid">
+		<div class="container">
+			<div class="row" id="grey-text">
+				<div class="col-md-3">
+					<img src="img/petstore_logo.png" alt="Pet store Logo" class="img-responsive" id="footer-logo">
+				</div>
+
+				<div class="col-md-2 border-left-grey">
+					<address>
+						Pet Store<br/>
+						Fresno, CA <br/>
+						info@petstore.com
+					</address>
+				</div>
+				<div class="col-md-2 border-left-grey">
+					<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a>
+					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</a>
+					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>Linkedin</a>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<p>&copy;Petstore Inc. All Rights Reserved</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
