--- a/index.html
+++ b/index.html
@@ -19,23 +19,20 @@
 				<div class="col-md-3 col-md-offset-1">
 					<img src="img/petstore_logo.png" class="img-responsive logo-size" alt="Pet Store Logo"> <span class="word-logo">Pet Store</span>
 				</div>
+
+				<div class="col-md-4 col-md-offset-4">
+					<ul class="nav nav-pills">
+						<li role="presentation" ><a href="#">Home</a></li>
+						<li role="presentation" ><a href="#">Products</a></li>
+						<li role="presentation" ><a href="#">Contact us</a></li>
+					</ul>
+				</div>
 			</div>
-		</div>
-			<div class="col-md-4 col-md-offset-4">
-				<ul class="nav nav-pills">
-					<li role="presentation" class="active"><a href="#">Home</a></li>
-					<li role="presentation" ><a href="#">Products</a></li>
-					<li role="presentation" ><a href="#">Contact us</a></li>
-				</ul>
 			</div>
 		</header>
 		<!-- Hero Section -->
 		<div class="jumbotron">
-			<div class="col-md-12 hero">
-				<h1 class="text-center" id="hero-text">THE PRODUCTS THEY LOVE. PRICES THAT YOU LIKE.</h1>
-
-
-			</div>
+			<p class="text-center" >THE PRODUCTS THEY LOVE. PRICES THAT YOU LIKE.</p>
 		</div>
 	</div>
 
@@ -45,7 +42,7 @@
 		<div class="col-md-8">
 			<div class="row">
 				<div class="col-md-12">
-						<h1>Featured</h1>
+						<h2>Featured</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
 				</div>
@@ -53,13 +50,13 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="row">
-					  <div class="col-sm-6 col-md-12">
+					  <div class="col-md-12">
 					    <div class="thumbnail">
-					      <img src="img/product1.jpg" alt="...">
+					      <img src="img/product1.jpg" alt="Dog bowl" class="img-responsive">
 					      <div class="caption">
-					        <h3>Thumbnail label</h3>
-					        <p>...</p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					        <h3>Dog Bowl</h3>
+					        <p>This is the best dog bowl</p>
+					        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
 					      </div>
 					    </div>
 					  </div>
@@ -67,13 +64,13 @@
 				</div>
 				<div class="col-md-4">
 					<div class="row">
-					  <div class="col-sm-6 col-md-12">
+					  <div class="col-md-12">
 					    <div class="thumbnail">
-					      <img src="img/product2.jpg" alt="...">
+					      <img src="img/product2.jpg" alt="Cat Toys" class="img-responsive">
 					      <div class="caption">
-					        <h3>Thumbnail label</h3>
-					        <p>...</p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					        <h3>Cat Toy</h3>
+					        <p>The best cat toy on the market</p>
+					        <p><a href="#" class="btn btn-default" role="button">Purchase Now</a></p>
 					      </div>
 					    </div>
 					  </div>
@@ -90,7 +87,7 @@
 					      <div class="caption">
 					        <h3>Thumbnail label</h3>
 					        <p>...</p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					        <p> <a href="#" class="btn btn-default" role="button">PUrchase Now</a></p>
 					      </div>
 					    </div>
 					  </div>
@@ -105,9 +102,13 @@
 				<div class="row">
 					<h2>Services</h2>
 					<ul class="nav nav-pills nav-stacked" id="services-nav">
-					  <li role="presentation" class="active"><a href="#">Home</a></li>
-					  <li role="presentation"><a href="#">Profile</a></li>
-					  <li role="presentation"><a href="#">Messages</a></li>
+					  <li role="presentation" class="active"><a href="#">Home</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+						</li>
+					  <li role="presentation"><a href="#">Profile</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p></li>
+					  <li role="presentation"><a href="#">Messages</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p></li>
 					</ul>
 				</div>
 			</div>
